优化CORS配置，限制允许的方法，增强安全性